Lab Course 3: Add Vents.cshtml as Layout

--- a/events.tac.local/Views/web.config
+++ b/events.tac.local/Views/web.config
@@ -16,9 +16,9 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="events.tac.local" />
-        <add namespace="Sitecore.MVC"/>
-        <add namespace="Sitecore.MVC.Presentation"/>
+        <add namespace="Sitecore.Mvc"/>
+        <add namespace="Sitecore.Mvc.Analytics.Extensions"/>
+        <add namespace="Sitecore.Mvc.Presentation"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
@@ -37,7 +37,7 @@
   <system.web>
     <compilation>
       <assemblies>
-        <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Mvc, Version=5.2.6.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
   </system.web>
