--- a/events.tac.local/events.tac.local.csproj
+++ b/events.tac.local/events.tac.local.csproj
@@ -48,13 +48,17 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.7\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
     <Reference Include="Sitecore.Kernel, Version=11.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Sitecore.Kernel.NoReferences.9.0.0\lib\net461\Sitecore.Kernel.dll</HintPath>
     </Reference>
     <Reference Include="Sitecore.Mvc, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Sitecore.Mvc.NoReferences.9.0.0\lib\net461\Sitecore.Mvc.dll</HintPath>
     </Reference>
-    <Reference Include="Sitecore.Mvc.Analytics, Version=11.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Sitecore.Mvc.Analytics">
       <HintPath>..\packages\Sitecore.Mvc.Analytics.NoReferences.9.0.0\lib\net461\Sitecore.Mvc.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.DynamicData" />
@@ -66,6 +70,24 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.6\lib\net45\System.Web.Helpers.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Mvc, Version=5.2.6.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.6\lib\net45\System.Web.Mvc.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Razor.3.2.6\lib\net45\System.Web.Razor.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.6\lib\net45\System.Web.WebPages.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.6\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.6\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -75,45 +97,124 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System.Web.Razor">
-      <HintPath>..\packages\Microsoft.AspNet.Razor.3.2.3\lib\net45\System.Web.Razor.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Webpages">
-      <HintPath>..\packages\Microsoft.AspNet.Webpages.3.2.3\lib\net45\System.Web.Webpages.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Webpages.Deployment">
-      <HintPath>..\packages\Microsoft.AspNet.Webpages.3.2.3\lib\net45\System.Web.Webpages.Deployment.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Webpages.Razor">
-      <HintPath>..\packages\Microsoft.AspNet.Webpages.3.2.3\lib\net45\System.Web.Webpages.Razor.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Helpers">
-      <HintPath>..\packages\Microsoft.AspNet.Webpages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Web.Infrastructure">
-      <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Mvc">
-      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Css\addition.css" />
+    <Content Include="Css\bower_components\bootstrap-sass\assets\fonts\bootstrap\glyphicons-halflings-regular.svg" />
+    <Content Include="Css\bower_components\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="Css\Difficulty.css" />
+    <Content Include="Css\font-awesome.min.css" />
+    <Content Include="Css\niteflight.min.css" />
+    <Content Include="Css\vendor.min.css" />
+    <Content Include="Fonts\bitter-v7-latin-700.svg" />
+    <Content Include="Fonts\bitter-v7-latin-italic.svg" />
+    <Content Include="Fonts\bitter-v7-latin-regular.svg" />
+    <Content Include="Fonts\fontawesome-webfont.svg" />
+    <Content Include="Fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Fonts\open-sans-v13-latin-300.svg" />
+    <Content Include="Fonts\open-sans-v13-latin-300italic.svg" />
+    <Content Include="Fonts\open-sans-v13-latin-600.svg" />
+    <Content Include="Fonts\open-sans-v13-latin-600italic.svg" />
+    <Content Include="Fonts\open-sans-v13-latin-700.svg" />
+    <Content Include="Fonts\open-sans-v13-latin-700italic.svg" />
+    <Content Include="Fonts\open-sans-v13-latin-800.svg" />
+    <Content Include="Fonts\open-sans-v13-latin-italic.svg" />
+    <Content Include="Fonts\open-sans-v13-latin-regular.svg" />
+    <Content Include="Images\carousel-climbing.jpg" />
+    <Content Include="Images\carousel-cycling.jpg" />
+    <Content Include="Images\carousel-hiking.jpg" />
+    <Content Include="Images\carousel-skiing.jpg" />
+    <Content Include="Images\climbing-events.jpg" />
+    <Content Include="Images\Climbing-the-Face-of-Half-Dome.jpg" />
+    <Content Include="Images\cycling-events.jpg" />
+    <Content Include="Images\Cycling-from-Bangkok-to-Chiang-Mai.jpg" />
+    <Content Include="Images\hiking-events.jpg" />
+    <Content Include="Images\Hiking-the-Italian-Alps.jpg" />
+    <Content Include="Images\Logo_400x60.png" />
+    <Content Include="Images\Rock-Climbing-in-the-Czech-Republic.jpg" />
+    <Content Include="Images\skiing-events.jpg" />
+    <Content Include="Images\Skiing-the-Himalayas.jpg" />
     <Content Include="progress.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Scripts\Navigation.js" />
+    <Content Include="Scripts\Sitecore.Foundation.Theming.min.js" />
     <Content Include="Views\web.config">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Css\bower_components\bootstrap-sass\assets\fonts\bootstrap\glyphicons-halflings-regular.eot" />
+    <Content Include="Css\bower_components\bootstrap-sass\assets\fonts\bootstrap\glyphicons-halflings-regular.ttf" />
+    <Content Include="Css\bower_components\bootstrap-sass\assets\fonts\bootstrap\glyphicons-halflings-regular.woff" />
+    <Content Include="Css\bower_components\bootstrap-sass\assets\fonts\bootstrap\glyphicons-halflings-regular.woff2" />
+    <Content Include="Css\bower_components\font-awesome\fonts\fontawesome-webfont.eot" />
+    <Content Include="Css\bower_components\font-awesome\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Css\bower_components\font-awesome\fonts\fontawesome-webfont.woff" />
+    <Content Include="Css\bower_components\font-awesome\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Css\bower_components\font-awesome\fonts\FontAwesome.otf" />
+    <Content Include="Fonts\bitter-v7-latin-700.eot" />
+    <Content Include="Fonts\bitter-v7-latin-700.ttf" />
+    <Content Include="Fonts\bitter-v7-latin-700.woff" />
+    <Content Include="Fonts\bitter-v7-latin-700.woff2" />
+    <Content Include="Fonts\bitter-v7-latin-italic.eot" />
+    <Content Include="Fonts\bitter-v7-latin-italic.ttf" />
+    <Content Include="Fonts\bitter-v7-latin-italic.woff" />
+    <Content Include="Fonts\bitter-v7-latin-italic.woff2" />
+    <Content Include="Fonts\bitter-v7-latin-regular.eot" />
+    <Content Include="Fonts\bitter-v7-latin-regular.ttf" />
+    <Content Include="Fonts\bitter-v7-latin-regular.woff" />
+    <Content Include="Fonts\bitter-v7-latin-regular.woff2" />
+    <Content Include="Fonts\fontawesome-webfont.eot" />
+    <Content Include="Fonts\fontawesome-webfont.ttf" />
+    <Content Include="Fonts\fontawesome-webfont.woff" />
+    <Content Include="Fonts\fontawesome-webfont.woff2" />
+    <Content Include="Fonts\FontAwesome.otf" />
+    <Content Include="Fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Fonts\open-sans-v13-latin-300.eot" />
+    <Content Include="Fonts\open-sans-v13-latin-300.ttf" />
+    <Content Include="Fonts\open-sans-v13-latin-300.woff" />
+    <Content Include="Fonts\open-sans-v13-latin-300.woff2" />
+    <Content Include="Fonts\open-sans-v13-latin-300italic.eot" />
+    <Content Include="Fonts\open-sans-v13-latin-300italic.ttf" />
+    <Content Include="Fonts\open-sans-v13-latin-300italic.woff" />
+    <Content Include="Fonts\open-sans-v13-latin-300italic.woff2" />
+    <Content Include="Fonts\open-sans-v13-latin-600.eot" />
+    <Content Include="Fonts\open-sans-v13-latin-600.ttf" />
+    <Content Include="Fonts\open-sans-v13-latin-600.woff" />
+    <Content Include="Fonts\open-sans-v13-latin-600.woff2" />
+    <Content Include="Fonts\open-sans-v13-latin-600italic.eot" />
+    <Content Include="Fonts\open-sans-v13-latin-600italic.ttf" />
+    <Content Include="Fonts\open-sans-v13-latin-600italic.woff" />
+    <Content Include="Fonts\open-sans-v13-latin-600italic.woff2" />
+    <Content Include="Fonts\open-sans-v13-latin-700.eot" />
+    <Content Include="Fonts\open-sans-v13-latin-700.ttf" />
+    <Content Include="Fonts\open-sans-v13-latin-700.woff" />
+    <Content Include="Fonts\open-sans-v13-latin-700.woff2" />
+    <Content Include="Fonts\open-sans-v13-latin-700italic.eot" />
+    <Content Include="Fonts\open-sans-v13-latin-700italic.ttf" />
+    <Content Include="Fonts\open-sans-v13-latin-700italic.woff" />
+    <Content Include="Fonts\open-sans-v13-latin-700italic.woff2" />
+    <Content Include="Fonts\open-sans-v13-latin-800.eot" />
+    <Content Include="Fonts\open-sans-v13-latin-800.ttf" />
+    <Content Include="Fonts\open-sans-v13-latin-800.woff" />
+    <Content Include="Fonts\open-sans-v13-latin-800.woff2" />
+    <Content Include="Fonts\open-sans-v13-latin-italic.eot" />
+    <Content Include="Fonts\open-sans-v13-latin-italic.ttf" />
+    <Content Include="Fonts\open-sans-v13-latin-italic.woff" />
+    <Content Include="Fonts\open-sans-v13-latin-italic.woff2" />
+    <Content Include="Fonts\open-sans-v13-latin-regular.eot" />
+    <Content Include="Fonts\open-sans-v13-latin-regular.ttf" />
+    <Content Include="Fonts\open-sans-v13-latin-regular.woff" />
+    <Content Include="Fonts\open-sans-v13-latin-regular.woff2" />
     <None Include="packages.config" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
-    <None Include="Properties\PublishProfiles\CustomProfile.pubxml">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="Properties\PublishProfiles\tac.events.local.pubxml" />
+    <Content Include="Views\TAC\Events\Layouts\Events.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
