--- a/TAC/events.tac.local/Views/web.config
+++ b/TAC/events.tac.local/Views/web.config
@@ -9,16 +9,14 @@
   </configSections>
 
   <system.web.webPages.razor>
-    <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+    <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.4.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="Sitecore.Mvc"/>
-        <add namespace="Sitecore.Mvc.Analytics.Extensions"/>
-        <add namespace="Sitecore.Mvc.Presentation"/>
+        <add namespace="events.tac.local" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
@@ -37,7 +35,7 @@
   <system.web>
     <compilation>
       <assemblies>
-        <add assembly="System.Web.Mvc, Version=5.2.6.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Mvc, Version=5.2.4.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
   </system.web>
